feat(markers): Añadir descripciones de cada marker

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,8 @@
 [pytest]
 markers = 
-    dni_valido = 
-    obtener_tabla =
-    obtener_letra =
-    calcular_letra =
+    dni_valido: 
+    obtener_tabla: obtener array de la tabla de asignación
+    obtener_letra: obtener letra de un DNI 
+    calcular_letra: calcular que letra se le tiene que asignar al DNI
+    obtener_dni: obtener el DNI en esa instancia
+    obtener_numero: obtener número del DNI
